--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "author": "Pierre Chabardes <pierre@chabardes.net>",
   "description": "a webRTC live streaming server",
   "scripts": {
-    "start": "forever start app.js",
-    "stop": "forever stopall"
+    "start": "node start"
   },
   "repository": {
     "type": "git",
